# mcp-docx-server

./: .gitignore  README.md  pyproject.toml  run.py  server.py  server_runner.py  standalone_runner.py
mcp_docx_server/: __init__.py  content_ops.py  document_ops.py  header_footer_ops.py  section_ops.py  server.py  style_ops.py  utils.py
tools/: __init__.py  document_content.py  document_core.py  document_headers.py  document_section.py  document_style.py  document_table.py  document_utilities.py
utils/: __init__.py  helpers.py
